# rosbag_splitter

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  rosbag_splitter.py
.github/workflows/: build.yml  lint.yml
rosbag_splitter/: __init__.py  __main__.py  rosbag_splitter.py
